Replace methodargumentnotfound with constraint violation