@@ -4,148 +4,236 @@ import com.mongodbdemo.kitchensink.dto.MemberUpdateDto;
 import com.mongodbdemo.kitchensink.model.Member;
 import com.mongodbdemo.kitchensink.repository.MemberRepository;
 import com.mongodbdemo.kitchensink.service.MemberService;
+import jakarta.validation.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
-@SpringBootTest
-public class MemberControllerTest {
 
-    @InjectMocks
-    private MemberController memberController;
+class MemberControllerTest {
 
     @Mock
-    private MemberRepository repository;
+    private MemberRepository memberRepository;
 
     @Mock
     private MemberService memberService;
 
-    private Member sampleMember;
+    @Mock
+    private Validator validator;
+
+    @InjectMocks
+    private MemberController memberController;
 
     @BeforeEach
-    public void setup() {
+    void setUp() {
         MockitoAnnotations.openMocks(this);
-        sampleMember = new Member();
-        sampleMember.setId(1L);
-        sampleMember.setName("John Doe");
-        sampleMember.setEmail("john.doe@example.com");
-        sampleMember.setPhoneNumber("1234567890");
     }
 
     @Test
-    public void testListAllMembers() {
-        when(repository.findAllByOrderByNameAsc()).thenReturn(List.of(sampleMember));
+    void listAllMembersSuccess() {
+        // Given
+        List<Member> members = Arrays.asList(new Member(), new Member());
+        when(memberRepository.findAllByOrderByNameAsc()).thenReturn(members);
 
+        // When
         ResponseEntity<Iterable<Member>> response = memberController.listAllMembers();
 
+        // Then
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertTrue(response.getBody().iterator().hasNext());
+        assertEquals(members, response.getBody());
     }
 
     @Test
-    public void testLookupMemberByIdFound() {
-        when(repository.findById(1L)).thenReturn(Optional.of(sampleMember));
+    void lookupMemberByIdFound() {
+        // Given
+        Member member = new Member();
+        when(memberRepository.findById(1L)).thenReturn(Optional.of(member));
 
+        // When
         ResponseEntity<Member> response = memberController.lookupMemberById(1L);
 
+        // Then
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(sampleMember, response.getBody());
+        assertEquals(member, response.getBody());
     }
 
     @Test
-    public void testLookupMemberByIdNotFound() {
-        when(repository.findById(1L)).thenReturn(Optional.empty());
+    void lookupMemberByIdNotFound() {
+        // Given
+        when(memberRepository.findById(1L)).thenReturn(Optional.empty());
 
+        // When
         ResponseEntity<Member> response = memberController.lookupMemberById(1L);
 
+        // Then
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
-    public void testCreateMemberSuccess() {
-        when(repository.findByEmail("john.doe@example.com")).thenReturn(Optional.empty());
-        doNothing().when(memberService).register(sampleMember);
+    void createMemberSuccess() {
+        // Given
+        Member member = new Member();
+        doNothing().when(memberService).register(any(Member.class));
+        when(validator.validate(any(Member.class))).thenReturn(Collections.emptySet());
+        when(memberRepository.findByEmail(member.getEmail())).thenReturn(Optional.empty());
 
-        ResponseEntity<Map<String, String>> response = memberController.createMember(sampleMember);
+        // When
+        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
 
+        // Then
         assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 
     @Test
-    public void testCreateMemberEmailTaken() {
-        when(repository.findByEmail("john.doe@example.com")).thenReturn(Optional.of(sampleMember));
+    void createMemberConflict() {
+        // Given
+        Member member = new Member();
+        when(validator.validate(any(Member.class))).thenReturn(Collections.emptySet());
+        doThrow(new ValidationException("Email taken")).when(memberService).register(any(Member.class));
 
-        ResponseEntity<Map<String, String>> response = memberController.createMember(sampleMember);
+        // When
+        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
 
+        // Then
         assertEquals(HttpStatus.CONFLICT, response.getStatusCode());
-        assertEquals(Map.of("email", "Email taken"), response.getBody());
+        assertEquals("Email taken", response.getBody().get("email"));
     }
 
     @Test
-    public void testCreateMemberBadRequest() {
-        when(repository.findByEmail("john.doe@example.com")).thenReturn(Optional.empty());
-        doThrow(new RuntimeException("Error")).when(memberService).register(sampleMember);
+    void createMemberBadRequest() {
+        // Given
+        Member member = new Member();
+        when(validator.validate(any(Member.class))).thenReturn(Collections.emptySet());
+        doThrow(new RuntimeException("Unexpected error")).when(memberService).register(any(Member.class));
 
-        ResponseEntity<Map<String, String>> response = memberController.createMember(sampleMember);
+        // When
+        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
 
+        // Then
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        assertEquals(Map.of("error", "Error"), response.getBody());
+        assertEquals("Unexpected error", response.getBody().get("error"));
     }
 
     @Test
-    public void testUpdateMember() {
+    void createMemberValidationErrors() {
+        // Given
+        Member member = new Member();
+        ConstraintViolation<Member> violation = mock(ConstraintViolation.class);
+        when(violation.getMessage()).thenReturn("Invalid email");
+        Path mockPath = mock(Path.class);
+        when(mockPath.toString()).thenReturn("email");
+        when(violation.getPropertyPath()).thenReturn(mockPath);
+
+        Set<ConstraintViolation<Member>> violations = new HashSet<>();
+        violations.add(violation);
+        when(validator.validate(any(Member.class))).thenReturn(violations);
+
+        // When
+        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
+
+        // Then
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        assertEquals("Invalid email", response.getBody().get("email"));
+    }
+
+    @Test
+    void createMemberUniqueEmailViolation() {
+        // Given
+        Member member = new Member();
+        when(validator.validate(any(Member.class))).thenReturn(Collections.emptySet());
+        when(memberRepository.findByEmail(member.getEmail())).thenReturn(Optional.of(member));
+
+        // When
+        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
+
+        // Then
+        assertEquals(HttpStatus.CONFLICT, response.getStatusCode());
+    }
+
+    @Test
+    void updateMemberSuccess() {
+        // Given
         MemberUpdateDto updateDto = new MemberUpdateDto();
-        updateDto.setName("Jane Doe");
+        Member updatedMember = new Member();
+        when(memberService.updateMember(anyLong(), any(MemberUpdateDto.class))).thenReturn(updatedMember);
 
-        when(memberService.updateMember(1L, updateDto)).thenReturn(sampleMember);
-
+        // When
         ResponseEntity<Member> response = memberController.updateMember(1L, updateDto);
 
+        // Then
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(sampleMember, response.getBody());
+        assertEquals(updatedMember, response.getBody());
     }
 
     @Test
-    public void testDeleteMember() {
-        doNothing().when(memberService).deleteMember(1L);
+    void deleteMemberSuccess() {
+        // Given
+        doNothing().when(memberService).deleteMember(anyLong());
 
+        // When
         ResponseEntity<Void> response = memberController.deleteMember(1L);
 
+        // Then
         assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
     }
 
     @Test
-    public void testCreateMemberBadRequest2() throws Exception {
+    void validateMemberSuccess() {
+        // Given
         Member member = new Member();
-        member.setName("John Doe");
-        member.setEmail("invalid-email"); // Invalid email format
-        member.setPhoneNumber("1234567890");
+        when(validator.validate(member)).thenReturn(Collections.emptySet());
+        when(memberRepository.findByEmail(member.getEmail())).thenReturn(Optional.empty());
 
-        // Simulate a generic exception during creation
-        when(repository.findByEmail(member.getEmail())).thenThrow(new RuntimeException("Generic error"));
+        // When
+        memberController.createMember(member);
 
-        Map<String, String> expectedResponse = new HashMap<>();
-        expectedResponse.put("error", "Generic error");
-
-        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
-
-        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        assertEquals(expectedResponse, response.getBody());
+        // Then
+        verify(validator, times(1)).validate(member);
+        verify(memberRepository, times(1)).findByEmail(member.getEmail());
     }
 
+    @Test
+    void validateMemberEmailAlreadyExists() {
+        // Given
+        Member member = new Member();
+        when(validator.validate(member)).thenReturn(Collections.emptySet());
+        when(memberRepository.findByEmail(member.getEmail())).thenReturn(Optional.of(member));
 
+        // When
+        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
+
+        // Then
+        assertEquals(HttpStatus.CONFLICT, response.getStatusCode());
+    }
+
+    @Test
+    void validateMemberConstraintViolationException() {
+        // Given
+        Member member = new Member();
+        ConstraintViolation<Member> violation = mock(ConstraintViolation.class);
+        when(violation.getMessage()).thenReturn("Invalid email");
+        Path mockPath = mock(Path.class);
+        when(mockPath.toString()).thenReturn("email");
+        when(violation.getPropertyPath()).thenReturn(mockPath);
+
+        Set<ConstraintViolation<Member>> violations = new HashSet<>();
+        violations.add(violation);
+        when(validator.validate(member)).thenReturn(violations);
+
+        // When
+        ResponseEntity<Map<String, String>> response = memberController.createMember(member);
+
+        // Then
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        assertEquals("Invalid email", response.getBody().get("email"));
+    }
 }
-
-
